Add v0.3.7 release notes to release history (#419)
Document all changes since v0.3.6: WriterT transformer with MTL
capability interfaces (MonadWriter/MonadReader/MonadState),
for-comprehension enhancements (par, traverse/sequence, optics
integration), Fold combinators, hkj-checker compile-time plugin,
hkj-gradle-plugin one-line setup, Spring MVC virtual thread handlers
for VTaskPath and VStreamPath, dependency updates, and test improvements.